k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gofiber-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: gofiber-${LABEL}
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
